# examen-sql

./: .gitignore  CLAUDE.md  README.md  REPORTE_VERIFICACION.md  pyproject.toml  verify_answer_values.py  verify_questions.py  verify_solutions.py
data/: bar.db  gimnasio.db  restaurante.db
examenes/: examen_banco.md  examen_bar.md  examen_gimnasio.md  examen_hospital.md  examen_restaurante.md
soluciones/: solucion_banco.md  solucion_bar.md  solucion_gimnasio.md  solucion_hospital.md  solucion_restaurante.md
src/generadores/: __init__.py  banco.py  bar.py  gimnasio.py  hospital.py  restaurante.py
