[project]
name = "examen-sql"
version = "1.0.0"
description = "Repositorio educativo con examenes de SQL basados en bases de datos tematicas"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faker>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/generadores"]
